--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "axios": "^0.21.1",
+    "firebase": "^8.6.8",
     "next": "11.0.0",
     "next-auth": "^3.27.0",
     "react": "17.0.2",
