--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@heroicons/react": "^1.0.1",
     "axios": "^0.21.1",
     "firebase": "^8.6.8",
+    "luxon": "^1.27.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "next": "11.0.0",
     "next-auth": "^3.27.0",
